--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           />
         </a>
         <address class="adress header__adress">
-          <a href="tel:+9 999 555 5555">+9 999 555 5555</a>
+          <a href="tel:+99995555555">+9 999 555 5555</a>
           <br>
           <a href="mailto:info@sobaka.ge"> info@sobaka.ge</a>
           <p>наб. Принсенграхт 263- 265, Амстердам</p>
@@ -95,11 +95,8 @@
           </a>
         </li>
       </ul>
-      <a href="#" 
-      class="lots__look-more-link">посмотреть больше</a>
+      <a href="#" class="lots__look-more-link">посмотреть больше</a>
     </section>
-    
-     </cover>
 
     <section class="about">
       <div class="about__column">
@@ -117,13 +114,14 @@
             <p>Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря
             на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми.  
           </p>
+          </div>
         </div>
       </div>
     </section>
 
    <footer class="footer content-section">
       <address class="adress footer__adress">
-        <a href="tel:+9 999 555 5555">tel:+9 999 555 5555</a>
+        <a href="tel:+99995555555">tel:+9 999 555 5555</a>
         <br>
         <a href="mailto:info@sobaka.ge"> info@sobaka.ge</a>
         <p>наб. Принсенграхт 263- 265, Амстердам</p>
@@ -147,18 +145,16 @@
     <div class="footer__social-list">
       <ul class="footer__social-list-item">
         <li class="footer__social-link"> 
-         <ahref="#0"> 
-            <img class="footer__social-icon-yt" src="./images/yt.svg"></a>
+         <a href="#0"> 
+            <img class="footer__social-icon-yt" src="./images/yt.svg" alt="иконка ютуб"></a>
         </li>
         <li class="footer__social-link"> 
           <a href="#0">
-            <img class="footer__social-icon-vk" 
-            src="./images/vk.svg"></a>
+            <img class="footer__social-icon-vk" src="./images/vk.svg" alt="иконка вк"></a>
         </li> 
         <li class="footer__social-link"> 
           <a href="#0">
-            <img class="footer__social-icon-pin" 
-            src="./images/pinterest.svg"></a>
+            <img class="footer__social-icon-pin" src="./images/pinterest.svg" alt="иконка пинтерест"></a>
         </li>
       </ul>
     </div>
