--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <p>наб. Принсенграхт 263- 265, Амстердам</p>
         </address>
     </header>
-    
+  <main>
     <section class="cover">
          <div class="overlay"></div>
           <h1 class="cover__title">
@@ -118,7 +118,7 @@
         </div>
       </div>
     </section>
-
+  </main>
    <footer class="footer content-section">
       <address class="adress footer__adress">
         <a href="tel:+99995555555">tel:+9 999 555 5555</a>
