--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
-    <link rel="stylesheet" href="./fonts/fonts.css" />
-    <link rel="stylesheet" href="./styles/global.css" />
+    <link rel="stylesheet" href="./fonts/fonts.css"/>
+    <link rel="stylesheet" href="./styles/global.css"/>
     <link rel="stylesheet" href="./styles/style.css"/>
   </head>
   <body>
@@ -14,22 +14,20 @@
       <nav class="header__menu">
         <ul class="header__links-list">
           <li class="header__links-item header__links-list-item_no-bullit">
-            <a class="header__links-list">Главная</a>
+            <a class="header__link">Главная</a>
           </li>
           <li class="header__links-item">
-            <a class="header__links-list" href="#0">Посмотреть лоты</a>
+            <a class="header__link" href="#0">Посмотреть лоты</a>
           </li>
           <li class="header__links-item">
-            <a class="header__links-list" href="#0">Об аукционе</a>
+            <a class="header__link" href="#0">Об аукционе</a>
           </li>
         </ul>
       </nav>
         <a class="header__logo">
-          <img 
-          class="header__logo-image"
-          src="./images/logo-black.svg" 
-          alt="Логотип проекта черный"
-          />
+          <a href="#0">
+            <img class="header__logo-image" src="./images/logo-black.svg"
+          alt="Логотип проекта черный"/></a>
         </a>
         <address class="adress header__adress">
           <a href="tel:+99995555555">+9 999 555 5555</a>
@@ -49,7 +47,7 @@
               <span class="letter-spacing-extended">е</span>
             </span>
             <span class="aligned-text aligned-text_right">
-              <span class="letter-spacing-extended">н</span>а 
+              <span class="letter-spacing-extended">н</span>а
               <span class="no-letter-spacing">до</span>
               </span>
           </h1>
@@ -103,12 +101,12 @@
         <div class="about__logo">
           <img 
           class="about__logo-image"
-          src="./images/logo-white.svg" 
+          src="./images/logo-white.svg"
           alt="Логотип проекта белый"/>
         </div>
         <div class="about__title">
-          <div class="about__text"> 
-            <p class="about__text-title">Об аукционе</p>
+          <div class="about__text">
+            <h2 class="about__text-title">Об аукционе</h2>
             <p>Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?
             </p>
             <p>Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря
@@ -121,7 +119,7 @@
   </main>
    <footer class="footer content-section">
       <address class="adress footer__adress">
-        <a href="tel:+99995555555">tel:+9 999 555 5555</a>
+        <a href="tel:+99995555555">+9 999 555 5555</a>
         <br>
         <a href="mailto:info@sobaka.ge"> info@sobaka.ge</a>
         <p>наб. Принсенграхт 263- 265, Амстердам</p>
@@ -132,32 +130,32 @@
             <a class="footer__menu-link footer__menu-link_activ">Главная</a>
           </li>
           <li class="footer__links-item">
-            <a class="footer__links-list" 
+            <a class="footer__menu-link"
             href="#0">Посмотреть лоты</a>
           </li>
           <li class="footer__links-item">
-            <a class="footer__links-list" 
+            <a class="footer__menu-link"
             href="#0">Об аукционе</a>
           </li>
         </ul>
       </nav>
 
-    <div class="footer__social-list">
+    <class="footer__social-list">
       <ul class="footer__social-list-item">
-        <li class="footer__social-link"> 
+        <li a class="footer__social-link">
          <a href="#0"> 
-            <img class="footer__social-icon-yt" src="./images/yt.svg" alt="иконка ютуб"></a>
+            <img class="footer__social-icon" src="./images/yt.svg" alt="иконка ютуб"></a>
         </li>
-        <li class="footer__social-link"> 
+        <li a class="footer__social-link">
           <a href="#0">
-            <img class="footer__social-icon-vk" src="./images/vk.svg" alt="иконка вк"></a>
+            <img class="footer__social-icon" src="./images/vk.svg" alt="иконка вк"></a>
         </li> 
-        <li class="footer__social-link"> 
+        <li a class="footer__social-link">
           <a href="#0">
-            <img class="footer__social-icon-pin" src="./images/pinterest.svg" alt="иконка пинтерест"></a>
+            <img class="footer__social-icon" src="./images/pinterest.svg" alt="иконка пинтерест"></a>
         </li>
       </ul>
-    </div>
+    </class=>
     </footer>
   </body>
 </html>
